--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-
+  <head>
+    <link href="./index.css" rel="stylesheet">
+  </head>
 <body>
   <h1>YOUR NAME</h1>
   <p>Welcome to my website!</p>
